# Waffle-DB

./: .gitignore  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  analysis_options.yaml  benchmark.py  benchmark.sh  pubspec.yaml  run_benchmarks.sh
.github/: FUNDING.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
doc/api/: __404error.html  index.html  index.json  search.html
doc/api/waffle_db/: FutureWaffleConfigCopyWith-extension-sidebar.html  FutureWaffleConfigCopyWith.html  RustLib-class-sidebar.html  RustLib-class.html  VectorMetadata-class-sidebar.html  VectorMetadata-class.html  WaffleCollection-class-sidebar.html  WaffleCollection-class.html  WaffleConfig-class-sidebar.html  WaffleConfig-class.html  WaffleConfigCopyWith-extension-sidebar.html  WaffleConfigCopyWith.html  WaffleMetric.html  (+17 more)
example/: README.md  pubspec.yaml
example/integration_test/: profile_benchmark_test.dart  waffle_benchmark_test.dart  waffle_database_test.dart
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/windows/: CMakeLists.txt
ios/: waffle_db.podspec
lib/: waffle_db.dart
linux/: CMakeLists.txt
macos/: waffle_db.podspec
rust/: Cargo.toml
rust/benches/: engine_bench.rs
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: config.rs  math.rs  mod.rs  models.rs  storage.rs  waffle_db.rs
test/: user_benchmark_test.dart
test/benchmark/: dart_layer_benchmark_test.dart  stress_test.dart
test/core/: waffle_record_test.dart
test/modules/: waffle_exports_test.dart
windows/: CMakeLists.txt
(+110 files in other folders)
