[package]
name = "waffle_db"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "sync"] }
sled = { version = "0.34.7" }
serde = { version = "1.0.228", features = ["derive"] }
rkyv = { version = "0.8.16", features = ["bytecheck"] }
rayon = "1.12.0"
num_cpus = "1.16.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
