[package]
name = "waffle_db"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "sync"] }
sled = { version = "0.34.7" }
serde = { version = "1.0.228", features = ["derive"] }
rkyv = { version = "0.8.16", features = ["bytecheck"] }
rayon = "1.12.0"
num_cpus = "1.16.0"
hnsw_rs = "0.3.4"
rand = "0.8.5"
serde_json = "1.0.150"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "engine_bench"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
